Update random chosen and EO epochs

--- a/random_chosen_epochs_EO_age_.ipynb
+++ b/random_chosen_epochs_EO_age_.ipynb
@@ -122,7 +122,7 @@
     "        y.append(age_group)\n",
     "        subject_ids.append(subj_id)\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error processing {subj_id}: {e}\")\n",
+    "        print(f\" Error processing {subj_id}: {e}\")\n",
     "\n",
     "X = np.array(X)\n",
     "y = np.array(y)\n",
@@ -358,7 +358,7 @@
     "        y_random.append(age_group)\n",
     "        subject_ids_random.append(subj_id)\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error processing {subj_id}: {e}\")\n",
+    "        print(f\" Error processing {subj_id}: {e}\")\n",
     "\n",
     "X_random = np.array(X_random)\n",
     "y_random = np.array(y_random)\n",
